samples/_failures_safe/1761311743_214fe9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9ff4e55.c: In function ‘main’:
./samples/SAFE/__tmp_b9ff4e55.c:131:12: error: expected expression at end of input
  131 |     struct Matrix3x3 rot_x =
      |            ^~~~~~~~~
./samples/SAFE/__tmp_b9ff4e55.c:131:12: error: expected declaration or statement at end of input
